css/css.css
/* ------------------ GENERAL ------------------ */
body {
    font-size: 100%;
    overflow-x: hidden;
	position: relative;
}
html, body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    border: 0px;
    outline: 0px;
}
::selection {
	background-color: #CEE1F8;
	color: #fff;
}
html a {
    color: #EF106D;
}
html a:hover {
    color: #E8E9EF;
    text-decoration: none;
}


/* ------------------ FULLPAGE ------------------ */
.fullPage {
    position: relative;
    display: table;
    width: 100%;
    height: 100%;
	padding-top: 85px;
	padding-bottom: 25px;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}


/* ------------------ INTRO ------------------ */
#particles {
    width: 100%!important;
    height: 100%!important;
    position: absolute!important;
    top: 0!important;
    left: 0!important;
	background: #CEE1F8;
    background: -webkit-linear-gradient(#CEE1F8, #532895);
    background: -o-linear-gradient(#CEE1F8, #532895);
    background: -moz-linear-gradient(#CEE1F8, #532895);
    background: linear-gradient(#CEE1F8, #532895);
}
#wrapper {
    z-index: 10;
	height: calc(100% - 50px);
}
#content {
    display: table-cell;
    background-color: transparent;
    float: none;
    vertical-align: middle;
    height: 80px;
    top: 0px!important;
    text-align: center;
    z-index: 5;
	padding: 0px 20px 0px 20px;
	font-family: 'Didot';
}
#content h1 {
    width: 313px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0px;
}


/* ------------------ LANDING PAGE STYLING ------------------ */
#signup-form {
	box-sizing: border-box;
   	width: 220px;
	overflow: hidden;
	text-align: center;
	margin-left: auto;
	margin-right: auto;
}
#signup-form input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0 1000px #000 inset !important;
	-webkit-text-fill-color: #fff !important;
}
#signup-form input {
	color: #fff;
	letter-spacing: 2px;
	font-size: 18px;
	line-height: 20px;
	width: 100%;
	background: none;
	outline: none;
	border: 0;
	border-radius: 0;
	margin-bottom: 35px;
	text-align: center;
	border-bottom: 2px solid #fff;
}
#signup-form input[type="submit"] {
	border: 2px solid #FFF;
	padding: 10px 20px 11px;	
	cursor: pointer;
	text-align: center;
	width: auto;
}
#signup-form input[type="submit"]:hover {
	border: 2px solid #CEE1F8;
	color: #CEE1F8;
}
#signup-form ::-webkit-input-placeholder {
	color: #fff;
	font-style: italic;
}
#signup-form ::-moz-placeholder {
	color: #fff;
	font-style: italic;
}
#signup-form :-ms-input-placeholder {
	color: #fff;
	font-style: italic;
}
#signup-form input:-moz-placeholder {
	color: #fff;
	font-style: italic;
}


/* ------------------ ROOM STYLING ------------------ */
#content > div {
	height: 130px;
	width: 130px;
	display: inline-block;
	padding: 15px;
}
.transparent-bubble {
    height: 100px;
	width: 100px;
	border-radius: 100%;
	display: inline-block;
	position: relative;
	top: 0px;
	left: 0px;
/*	background-color: rgb(63, 221, 255);*/
	background-color: #fff;
}
.user-bubble {
    height: 100px;
	width: 100px;
	background-color: transparent;
	border-radius: 100%;
	border: 2px solid #fff;
	text-align: center;
	display: inline-block;
	position: relative;
	top: -103px;
}
.user-bubble p {
    line-height: 100px;
	color: #fff;
	font-size: 20px;
	letter-spacing: 10px;
	margin-right: -10px;
}
#back {
	top: 0px;
	left: 0px;
	position: fixed;
	padding-left: 10px;
}
#back p {
	font-family: 'TitilliumTitle20', sans-serif;
	font-size: 50px;
	color: #fff;
}

